VW-001: clean up MemoryIssueViewerExample